# django-composite-field

./: .dockerignore  .gitignore  .hgignore  AUTHORS  CHANGELOG  CHANGELOG.md  CODESHELTER.md  Dockerfile  INSTALL  INSTALL.md  LICENSE  LICENSE-APACHE  LICENSE-BSD  LICENSE-MIT  MANIFEST.in  Makefile  README  README.md  README.rst  bitbucket-pipelines.yml  pyproject.toml  setup.py  test_settings.py  tox.ini
.github/workflows/: python-package.yml
composite_field/: __init__.py  base.py  complex.py  l10n.py  rest_framework_support.py  tests.py
composite_field_test/: admin.py  models.py
docs/: pyproject.toml  requirements.txt
docs/source/: changelog.rst  conf.py  example.rst  examples.rst  faq.rst  index.rst  install.rst  license.rst  tests.rst  usage.rst
