[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
